basic_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <name>
  labels:
    app: <app_name> 
spec:
  replicas: <number_of_replicas>
  selector:
    matchlabels:
      app: <app_name> 
    template:
      metadata: 
        labels:
          app: <app_name>
      spec:
        containers:
        - name: <container_name> 
          image: <image>
          ports:
        - containerPort: <container_port>
